added license file and changed the license type in the package.json file to MIT

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "component"
   ],
   "author": "xLeDocteurx",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/xLeDocteurx/vue-avataaars/issues"
   },
