--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-avataaars",
   "version": "0.0.1",
-  "description": "A vue js port of the react-avataaars library from getavataaars.com",
+  "description": "A vue js port of the react-avataaars library from avataaars.com",
   "main": "Avataaars.vue",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
