--- a/github-page/package.json
+++ b/github-page/package.json
@@ -18,7 +18,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.4"
   },
   "eslintConfig": {
     "root": true,
