--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest docs",
     "build-bundle": "vue-cli-service build --target lib --name vue-avataaars ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
@@ -27,6 +27,7 @@
   },
   "bundleDependencies": false,
   "keywords": [
+    "vue avatar",
     "avataaars",
     "avatar",
     "avatars",
